# PatternCompression

./: .gitignore  CMakeLists.txt
include/: CMakeLists.txt  Compress.h
src/: CMakeLists.txt  Compress.cpp  main.cpp
